HelloUltraviolet/Fixtures/RejectedSource/Expressions/CastValidity/Expected.uv
//! Expected diagnostic metadata for the CastValidity rejected-source specimen.

expectedDiagnostic("E-SEM-2528", "def.16.CastValidity")
